--- a/style.css
+++ b/style.css
@@ -1,1 +1,19 @@
+table {
 
+background: purple;
+
+}
+td {
+
+border: 1px solid #000000;
+
+border-color: black;
+
+}
+td, th {
+
+border: 1px solid #000000;
+
+border-color: light blue;
+
+}
